--- a/nginx-conf-certificate/acme-challenge.template
+++ b/nginx-conf-certificate/acme-challenge.template
@@ -16,8 +16,9 @@ server {
         }
 
         location / {
-            return 502 'bad gateway';
-#                 return 301 https://$host$request_uri;
-#                 rewrite ^ https://$host$request_uri? permanent;
+            return 402 'silly hacker';
+#             return 502 'bad gateway';
+#             return 301 https://$host$request_uri;
+#             rewrite ^ https://$host$request_uri? permanent;
         }
 }
