--- a/nginx-conf/base.template
+++ b/nginx-conf/base.template
@@ -18,11 +18,7 @@ server {
 #         location / {
 #             proxy_pass http://ret:4001/;
 #
-#             proxy_set_header X-Forwarded-For "";
-#
-#             proxy_set_header Host $host;
-#             proxy_set_header X-Real-IP $remote_addr;
-#             proxy_set_header Access-Control-Allow-Origin "$HUB_DOMAIN";
+#            include /etc/nginx/conf.d/proxy-headers.conf;
 #         }
 
 # https://hubs.hominidsoftware.com/spoke
