--- a/nginx-conf/proxy-headers.template
+++ b/nginx-conf/proxy-headers.template
@@ -3,4 +3,5 @@
 
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header Access-Control-Allow-Origin "$HUB_DOMAIN";
+
+            add_header Access-Control-Allow-Origin "$HUB_DOMAIN";
