--- a/nginx-conf/support.template
+++ b/nginx-conf/support.template
@@ -2,7 +2,7 @@ server {
         listen 443 ssl;
         listen [::]:443 ssl;
         http2 on;
-        server_name support.${HUB_DOMAIN};
+        server_name support.$HUB_DOMAIN;
 
         location ~ /.well-known/acme-challenge {
                 allow all;
@@ -22,8 +22,8 @@ server {
 
         server_tokens off;
 
-        ssl_certificate     /etc/letsencrypt/live/${HUB_DOMAIN}/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/${HUB_DOMAIN}/privkey.pem;
+        ssl_certificate     /etc/letsencrypt/live/$HUB_DOMAIN/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/$HUB_DOMAIN/privkey.pem;
 
         include /etc/nginx/conf.d/options-ssl-nginx.conf;
 
