--- a/nginx-conf/support.template
+++ b/nginx-conf/support.template
@@ -25,15 +25,8 @@ server {
         ssl_certificate     /etc/letsencrypt/live/$HUB_DOMAIN/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/$HUB_DOMAIN/privkey.pem;
 
-        include /etc/nginx/conf.d/options-ssl-nginx.conf;
-
-        add_header X-Frame-Options "SAMEORIGIN" always;
-        add_header X-XSS-Protection "1; mode=block" always;
-        add_header X-Content-Type-Options "nosniff" always;
-        # add_header Referrer-Policy "no-referrer-when-downgrade" always;
-        add_header Content-Security-Policy "default-src 'none'; script-src 'none'; connect-src 'none'; img-src 'none'; style-src 'none'; frame-ancestors 'none'; form-action 'none';" always;
-        # add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
-        # enable strict transport security only if you understand the implications
+        include /etc/nginx/conf.d/options-ssl-nginx.inc;
+        include /etc/nginx/conf.d/security.inc;
 
         location ~ /\.ht {
                 deny all;
