--- a/nginx-conf/assets-cors.template
+++ b/nginx-conf/assets-cors.template
@@ -14,38 +14,45 @@ server {
                 root /var/www/acme-challenge;
         }
 
+        # It might be best to let the catchall block handle this.
+        location /api-internal {
+          return 404 'not found';
+        }
+
 # https://assets.single.hominidsoftware.com/hubs/assets/stylesheets/support-63d74e7f6dde478
-        location /hubs/ {
-            proxy_pass http://hubs:8080/;
+        location /hubs {
+            proxy_pass https://hubs:8080/;
 
             include /etc/nginx/conf.d/proxy-headers.inc;
+            add_header Access-Control-Allow-Origin "$HUB_DOMAIN";
         }
 
 # https://assets.single.hominidsoftware.com/spoke/assets/js/entry-0bff1a698e3d55268289.js
 # https://assets.single.hominidsoftware.com/spoke/assets/images/favicon.ico
-        location /spoke/ {
-            proxy_pass http://spoke:8080/;
+        location /spoke {
+            proxy_pass https://spoke:8080/;
 
             include /etc/nginx/conf.d/proxy-headers.inc;
+            add_header Access-Control-Allow-Origin "$HUB_DOMAIN";
         }
 
 # "proxy_pass" cannot have URI part in location given by regular expression
-#         location /files/ {
-#             proxy_pass http://ret:4001/;
-#
-#            include /etc/nginx/conf.d/proxy-headers.inc;
-##            add_header Access-Control-Allow-Origin "$HUB_DOMAIN";
-#         }
-#
-#         location /http {
-#             proxy_pass http://ret:4001/;
-#
-#            include /etc/nginx/conf.d/proxy-headers.inc;
-##            add_header Access-Control-Allow-Origin "$HUB_DOMAIN";
-#         }
+        location /files/ {
+            proxy_pass http://ret:4001/;   # HTTP
 
-#         # only stream needs this, but it should be ok
-#         location /nearspark/ {
+           include /etc/nginx/conf.d/proxy-headers.inc;
+           add_header Access-Control-Allow-Origin "$HUB_DOMAIN";
+        }
+
+        location /http {
+            proxy_pass http://ret:4001/;   # HTTP
+
+           include /etc/nginx/conf.d/proxy-headers.inc;
+           add_header Access-Control-Allow-Origin "$HUB_DOMAIN";
+        }
+
+#         # only stream (not cors) needs this, but it should be ok
+#         location /nearspark {
 #             proxy_pass http://nearspark:5000/;
 #             rewrite ^/nearspark/(.*)$ /$1 break;
 #         }
@@ -61,12 +68,4 @@ server {
 
         include /etc/nginx/conf.d/options-ssl-nginx.inc;
         include /etc/nginx/conf.d/security.inc;
-
-#         add_header X-Frame-Options "SAMEORIGIN" always;
-#         add_header X-XSS-Protection "1; mode=block" always;
-#         add_header X-Content-Type-Options "nosniff" always;
-#         # add_header Referrer-Policy "no-referrer-when-downgrade" always;
-#         add_header Content-Security-Policy "default-src 'none'; script-src 'none'; connect-src 'none'; img-src 'none'; style-src 'none'; frame-ancestors 'none'; form-action 'none';" always;
-#         # add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
-#         # enable strict transport security only if you understand the implications
 }
