--- a/nginx-conf/stream.template
+++ b/nginx-conf/stream.template
@@ -18,18 +18,16 @@ server {
         location / {
             return 501 'under construction';
 
-#             proxy_pass https://dialog:4443/;
+#             proxy_pass https://dialog:4443;   # TLS
 #             proxy_buffering off;
 ## haproxy.org/load-balance: "url_param roomId"
 #
-#            include /etc/nginx/conf.d/proxy-headers.inc;
+#            include /etc/nginx/conf.d/proxy-directives.inc;
         }
-
-        server_tokens off;
 
         ssl_certificate /etc/letsencrypt/live/$HUB_DOMAIN/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/$HUB_DOMAIN/privkey.pem;
-
         include /etc/nginx/conf.d/options-ssl-nginx.inc;
+
         include /etc/nginx/conf.d/security.inc;
 }
